--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_home_screen">HomeScreen</string>
     <string name="title_activity_favourites">FavouritesActivity</string>
     <string name="title_activity_account">AccountActivity</string>
+    <string name="title_activity_sign_up">SignUpActivity</string>
 </resources>
