--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_favourites">FavouritesActivity</string>
     <string name="title_activity_account">AccountActivity</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
